# src/dto/creategame.dto.ts
@@ -1,0 +1,4 @@
+export interface CreateGameDTO {
+    title: string;
+    consoleId: number;
+  }
